Name:                Rewind
Version:             1.0.0
Cabal-version:       >=1.8
Build-type:          Simple

Library
    Build-depends:
        base > 4 && < 5,
        containers >= 0.4 && < 0.6,
        lens >= 3.8 && < 3.11
    Exposed-modules:
        Rewind.Area
    HS-source-dirs: sources

Test-Suite tests
    Type: exitcode-stdio-1.0
    Main-is: tests.hs
    Hs-source-dirs: tests
    Build-depends:
        Rewind,
        base > 4 && < 5,
        containers == 0.5.*,
        HUnit == 1.2.*,
        lens >= 3.8 && < 3.11,
        QuickCheck == 2.6.*,
        smallcheck == 1.0.*,
        test-framework == 0.8.*,
        test-framework-smallcheck == 0.2.*,
        test-framework-quickcheck2 == 0.3.*
